@@ -7,6 +7,12 @@
       "recruitable": "Yes"
     },
     {
+      "dungeonID": -2,
+      "dungeonName": "Sky Peak",
+      "dungeonPokemonList": [11,435,389,2,20,22,70,153,315,330,57,107,162,217,400,105,292,492],
+      "recruitable": "Yes"
+    },
+    {
       "dungeonID": 1,
       "dungeonName": "Beach Cave",
       "dungeonPokemonList": [90,140,222,422.2],
@@ -257,6 +263,53 @@
       "dungeonName": "Happy Outlook",
       "dungeonPokemonList": [11,43,52,53,103,113,152,175,176,191,192,242,273,300,316,332,387,406,439,440,380],
       "recruitable": "Yes"
+    },
+    {
+      "dungeonID": 43,
+      "dungeonName": "Mt. Mistral",
+      "dungeonPokemonList": [18,22,49,142,189,277,330,398,414,426,429,472,250],
+      "recruitable": "Yes"
+    },
+    {
+      "dungeonID": 44,
+      "dungeonName": "Shimmer Hill",
+      "dungeonPokemonList": [57,59,111,128,161,179,196,203,217,228,242,241,264,323,351,435,386],
+      "recruitable": "Yes"
+    },
+    {
+      "dungeonID": 45,
+      "dungeonName": "Lost Wilderness",
+      "dungeonPokemonList": [63,64,108,122,126,236,237,275,297,307,308,327,453,296,448],
+      "recruitable": "Yes"
+    },
+    {
+      "dungeonID": 46,
+      "dungeonName": "Midnight Forest",
+      "dungeonPokemonList": [15,20,48,49,69,123,165,166,265,267,274,290,315,479,381],
+      "recruitable": "Yes"
+    },
+    {
+      "dungeonID": 47,
+      "dungeonName": "Zero Isle North",
+      "dungeonPokemonList": [53, 65, 68, 141, 238, 469, 101, 80, 138, 22, 273, 219, 90, 42, 73, 106, 107, 112, 122, 124, 132, 164, 178, 214, 229, 295, 320, 323, 466, 467, 50, 12, 15, 37, 126, 168, 184, 292, 297, 311, 312, 160, 224, 8, 49, 87, 96, 98, 123, 127, 133, 222, 286, 307, 308, 314, 324, 348, 437, 468, 474, 205, 2, 56, 76, 93, 185, 426, 289, 26, 82, 202, 430, 116, 153, 211, 318, 337, 439, 344, 398, 32, 39, 110, 156, 5, 223, 303, 335, 359, 458, 230, 225, 34, 310, 3, 6, 9, 149, 154, 157, 365, 376, 422.2, 457, 227, 248, 254, 257, 260, 450, 452, 465, 473, 91, 317, 362, 373, 24, 45, 51, 62, 89, 121, 171, 217, 241, 429, 70, 416, 435, 455, 475, 284, 94],
+      "recruitable": "No"
+    },{
+      "dungeonID": 48,
+      "dungeonName": "Zero Isle East",
+      "dungeonPokemonList": [87, 90, 222, 140, 184, 79, 193, 56, 73, 100, 21, 273, 214, 57, 42, 132, 163, 177, 228, 320, 122, 48, 106, 82, 15, 37, 160, 167, 218, 113, 98, 126, 204, 8, 138, 75, 93, 133, 176, 285, 436, 311, 312, 123, 127, 111, 292, 2, 96, 185, 337, 347, 425, 439, 466, 474, 25, 314, 198, 296, 153, 343, 32, 323, 359, 34, 307, 308, 156, 223, 5, 200, 335, 230, 110, 101, 116, 224, 225, 318, 12, 294, 310, 324, 360],
+      "recruitable": "No"
+    },
+    {
+      "dungeonID": 49,
+      "dungeonName": "Zero Isle West",
+      "dungeonPokemonList": [140, 90, 393, 222, 83, 100, 193, 351, 79, 72, 104, 21, 273, 290, 216, 240, 120, 233, 42, 49, 64, 139, 163, 178, 184, 220, 229, 259, 320, 394, 431, 434, 88, 106, 111, 323, 122, 451, 466, 12, 15, 32, 37, 47, 113, 141, 160, 167, 224, 242, 292, 311, 312, 326, 468, 425, 328, 8, 48, 87, 91, 97, 99, 112, 123, 127, 133, 142, 162, 215, 241, 246, 348, 436, 474, 23, 307, 308, 314, 73, 337, 204, 2, 58, 61, 93, 126, 132, 185, 238, 267, 286, 408, 25, 81, 68, 476, 80, 435, 76, 116, 164, 168, 181, 202, 212, 227, 318, 324, 354, 388, 430, 439, 462, 343, 51, 296, 143, 149, 409, 89, 101, 24, 39, 110, 117, 156, 214, 391, 464, 5, 200, 223, 335, 359, 342, 230, 166, 225, 295, 437, 34, 108, 310],
+      "recruitable": "No"
+    },
+    {
+      "dungeonID": 50,
+      "dungeonName": "Zero Isle West",
+      "dungeonPokemonList": [16, 39, 90, 117, 120, 121, 433, 173, 69, 265, 10, 102, 170, 431, 261, 316, 29, 19, 104, 246, 175, 263, 35, 239, 50, 304, 67, 70, 291, 187, 202, 21, 11, 13, 466, 72, 280, 133, 183, 269, 343, 307, 313, 97, 177, 171, 103, 74, 434, 123, 163, 436, 474, 209, 185, 227, 348, 287, 311, 312, 15, 23, 88, 264, 43, 161, 220, 317, 73, 192, 460, 351, 285, 374, 425, 165, 327, 83, 58, 60, 328, 100, 193, 154, 167, 439, 51, 216, 391, 388, 464, 309, 430, 181, 32, 207, 234, 125, 462, 84, 426, 62, 143, 310, 128, 44, 331, 198, 214, 286, 461, 332, 451, 210, 130, 435, 168, 188, 206, 290, 476, 89, 42, 371, 30, 33, 126, 114, 314, 59, 22, 205, 213, 101, 106, 107, 240, 322, 452, 262, 219, 132, 409, 78, 324, 111, 333, 402, 24, 361, 221, 162, 305, 375, 204, 410, 413, 142, 372, 247, 335, 432, 45, 362, 404, 411, 49, 284, 289, 414, 109, 76, 112, 31, 47, 355, 473, 394, 419, 34, 368, 233, 323, 467, 429, 445, 353, 77, 166, 337, 338, 448, 356, 110, 376, 450, 395, 334, 437, 357, 407, 342, 344, 212],
+      "recruitable": "No"
     }
   ]
 }
