@@ -417,7 +417,7 @@
         },
         {
             "id": 83,
-            "name": "Farfetchd",
+            "name": "Farfetch'd",
             "imageID": "P_83"
         },
         {
@@ -612,7 +612,7 @@
         },
         {
             "id": 122,
-            "name": "Mr-Mime",
+            "name": "Mr. Mime",
             "imageID": "P_122"
         },
         {
@@ -2207,7 +2207,7 @@
         },
         {
             "id": 439,
-            "name": "Mime-Jr",
+            "name": "Mime Jr.",
             "imageID": "P_439"
         },
         {
