@@ -1,3 +1,8 @@
+______9/11/2024______
+- Managed to get portraits to work in the member roster
+- Added more data to test json
+- Added the locate that a given member was recruited
+
 ______9/2/2024______
 - Continued to fill out the PMD EoS information for utilization purposes.
 - Restructured the member list to allow for the selection of individual members
